--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -34,12 +34,12 @@
     "lucide-react": "^0.477.0",
     "motion": "^12.9.2",
     "nanoid": "^5.1.5",
-    "next": "15.2.1",
+    "next": "14.1.0",
     "next-themes": "^0.4.6",
     "posthog-js": "^1.236.7",
     "posthog-node": "^4.14.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.1",
@@ -50,14 +50,14 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.1",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5.0.4",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0"
   }
 }
