--- a/package.json
+++ b/package.json
@@ -1,30 +1,1 @@
-{
-  "name": "beatsync",
-  "packageManager": "bun@1.2.2",
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "start": "turbo run start",
-    "server": "turbo start --filter=server",
-    "client": "turbo start --filter=client",
-    "docker:build": "docker build -t beatsync .",
-    "docker:run": "docker rm -f beatsync-server 2>/dev/null || true && docker run --name beatsync-server -p 8080:8080 --env-file apps/server/.env beatsync",
-    "docker:prod": "bun run docker:build && bun run docker:run",
-    "docker:stop": "docker stop beatsync-server",
-    "docker:clean": "docker rm -f beatsync-server 2>/dev/null || true && docker system prune -f"
-  },
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "@aws-sdk/s3-request-presigner": "^3.828.0",
-    "turbo": "^2.4.4"
-  }
-}
+{"name":"client","version":"0.1.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start","lint":"next lint"},"dependencies":{"@radix-ui/react-accordion":"^1.2.4","@radix-ui/react-avatar":"^1.1.3","@radix-ui/react-dialog":"^1.1.14","@radix-ui/react-dropdown-menu":"^2.1.7","@radix-ui/react-label":"^2.1.2","@radix-ui/react-popover":"^1.1.6","@radix-ui/react-select":"^2.1.6","@radix-ui/react-separator":"^1.1.3","@radix-ui/react-slider":"^1.2.4","@radix-ui/react-slot":"^1.1.2","@radix-ui/react-switch":"^1.2.2","@radix-ui/react-tabs":"^1.1.4","@radix-ui/react-tooltip":"^1.2.0","@tanstack/react-query":"^5.67.3","@types/throttle-debounce":"^5.0.2","@vercel/analytics":"^1.5.0","async-mutex":"^0.5.0","axios":"^1.8.2","class-variance-authority":"^0.7.1","clsx":"^2.1.1","cmdk":"^1.1.1","input-otp":"^1.4.2","lucide-react":"^0.477.0","motion":"^12.9.2","nanoid":"^5.1.5","next":"14.1.0","next-themes":"^0.4.6","posthog-js":"^1.236.7","posthog-node":"^4.14.0","react":"^18.2.0","react-dom":"^18.2.0","react-hook-form":"^7.54.2","react-icons":"^5.5.0","sonner":"^2.0.1","tailwind-merge":"^3.0.2","tailwindcss-animate":"^1.0.7","throttle-debounce":"^5.0.2","zod":"^3.24.2","zustand":"^5.0.3"},"devDependencies":{"typescript":"^5.0.4","@types/node":"^20.0.0","@types/react":"^18.2.0","@types/react-dom":"^18.2.0","autoprefixer":"^10.4.16","postcss":"^8.4.31","tailwindcss":"^3.3.5","eslint":"^8.56.0","eslint-config-next":"14.1.0"}}
